body text filtrering færdig

--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
                     </div>
                 </div>
 
-                <!--
-        <div class="dropdown_bodytexts">
-            <button class="dropbtn">BODY TEXTS
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
 
-                <a href="#alle" class="filter valgt" data-kategori="alle">ALLE</a>
-                <a href="#sansserif" class="filter" data-kategori="sans-serif">SANS-SERIF</a>
-                <a href="#serif" class="filter" data-kategori="serif">SERIF</a>
-            </div>
-        </div>
--->
+                <div class="dropdown_bodytexts">
+                    <button class="dropbtn">BODY TEXTS
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+
+                        <a href="#alle" class="filter valgt" data-kategori="alleB">ALLE</a>
+                        <a href="#sansserif" class="filter" data-kategori="sans-serif">SANS-SERIF</a>
+                        <a href="#serif" class="filter" data-kategori="serif">SERIF</a>
+                    </div>
+                </div>
+
 
             </div>
             <nav> </nav>
