--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i|Raleway:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="dropdown_style.css">
     <style>
+        @font-face {
+            font-family: simplifica;
+            src: url('simplifica_typeface-webfont.woff2') format('woff2'),
+                url('simplifica_typeface-webfont.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+
+        }
+
         img {
 
             height: 100%;
@@ -49,6 +58,10 @@
 
         }
 
+        h1 {
+            font-family: simplifica;
+        }
+
         h3,
         p {
             margin-left: 5px;
@@ -85,11 +98,11 @@
         <header>
             <div class="navbar">
                 <div class="all">
-                    <button class="alle">ALL</button>
+                    <button class="dropbtn">ALL</button>
                 </div>
                 <div class="dropdown_headings">
                     <button class="dropbtn">HEADINGS
-                        <i class="fa fa-caret-down"></i>
+
                     </button>
                     <div class="dropdown-content">
 
