--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i|Raleway:300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="dropdown_style.css">
+    <link rel="stylesheet" href="style.css">
     <style>
 
     </style>
