--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div class="wrapper">
         <header>
             <div class="navbar">
+                <div class="logo">
+                    <img src="img/Logo.svg" alt="typographorum logo">
+                </div>
                 <div class="all">
                     <button class="dropbtn">ALL</button>
                 </div>
