--- a/index.html
+++ b/index.html
@@ -17,43 +17,7 @@
 
 <body>
     <div class="wrapper">
-        <header>
-            <div class="navbar">
-                <div class="logo">
-                    <img src="img/Logo.svg" alt="typographorum logo">
-                </div>
-                <div class="all">
-                    <button class="dropbtn">ALL</button>
-                </div>
-                <div class="dropdown_headings">
-                    <button class="dropbtn">HEADINGS
 
-                    </button>
-                    <div class="dropdown-content">
-
-                        <a href="#" class="filter valgt" data-kategori="alleO">ALLE</a>
-                        <a href="#" class="filter" data-kategori="sans-serif">SANS-SERIF</a>
-                        <a href="#" class="filter" data-kategori="serif">SERIF</a>
-                    </div>
-                </div>
-
-
-                <div class="dropdown_bodytexts">
-                    <button class="dropbtn">BODY TEXTS
-                        <i class="fa fa-caret-down"></i>
-                    </button>
-                    <div class="dropdown-content">
-
-                        <a href="#alle" class="filter valgt" data-kategori="alleB">ALLE</a>
-                        <a href="#sansserif" class="filter" data-kategori="sans-serif">SANS-SERIF</a>
-                        <a href="#serif" class="filter" data-kategori="serif">SERIF</a>
-                    </div>
-                </div>
-
-
-            </div>
-            <nav> </nav>
-        </header>
 
 
         <div class="splash">
@@ -91,4 +55,6 @@
         </section>
     </div>
     <script src="script.js"></script>
-</body></html>
+</body>
+
+</html>
