--- a/index.html
+++ b/index.html
@@ -13,44 +13,41 @@
 
 
 <body>
+
+
     <div class="wrapper">
         <header>
-            <div class="navbar">
-                <div class="logo">
-                    <img src="img/Logo.svg" alt="typographorum logo">
-                </div>
-                <div class="all">
-                    <button class="dropbtn">ALL</button>
-                </div>
-                <div class="dropdown_headings">
-                    <button class="dropbtn">HEADINGS
+            <nav>
+                <img class="logo" src="img/Logo.svg">
+                <ul class="list_wrapper">
 
-                    </button>
-                    <div class="dropdown-content">
-
-                        <a href="#" class="filter valgt" data-kategori="alleO">ALLE</a>
-                        <a href="#" class="filter" data-kategori="sans-serif">SANS-SERIF</a>
-                        <a href="#" class="filter" data-kategori="serif">SERIF</a>
-                    </div>
-                </div>
-
-
-                <div class="dropdown_bodytexts">
-                    <button class="dropbtn">BODY TEXTS
-                        <i class="fa fa-caret-down"></i>
-                    </button>
-                    <div class="dropdown-content">
-
-                        <a href="#alle" class="filter valgt" data-kategori="alleB">ALLE</a>
-                        <a href="#sansserif" class="filter" data-kategori="sans-serif">SANS-SERIF</a>
-                        <a href="#serif" class="filter" data-kategori="serif">SERIF</a>
-                    </div>
-                </div>
+                    <li>ALL</li>
+                    <li class="headings">HEADINGS
+                        <ul class="dropdown_content">
+                            <li>ALL</li>
+                            <li>SANS-SERIFS</li>
+                            <li>SERIFS</li>
+                        </ul>
+                    </li>
+                    <li class="body_texts">BODY TEXTS
+                        <ul class="dropdown_content">
+                            <li>ALL</li>
+                            <li>SANS-SERIFS</li>
+                            <li>SERIFS</li>
+                        </ul>
+                    </li>
+                </ul>
 
 
-            </div>
-            <nav> </nav>
+            </nav>
+
         </header>
+
+
+
+
+
+
 
 
         <div class="splash">
