--- a/index.html
+++ b/index.html
@@ -26,19 +26,23 @@
 
                 <ul class="list_wrapper">
 
-                    <li>ALL</li>
+                    <li class="all">ALL</li> <span class="span_left"></span>
                     <li class="headings">HEADINGS
                         <ul class="dropdown_content">
-                            <li>ALL</li>
+
+                            <li class="all_padding">ALL</li>
                             <li>SANS-SERIFS</li>
                             <li>SERIFS</li>
+
                         </ul>
-                    </li>
+                    </li> <span class="span_right"></span>
                     <li class="body_texts">BODY TEXTS
                         <ul class="dropdown_content">
+
                             <li>ALL</li>
                             <li>SANS-SERIFS</li>
                             <li>SERIFS</li>
+
                         </ul>
                     </li>
                 </ul>
@@ -91,6 +95,4 @@
         </section>
     </div>
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
