--- a/detaljeView.html
+++ b/detaljeView.html
@@ -11,6 +11,8 @@
     <style>
         .roboto {
             font-family: 'Roboto Slab';
+            font-weight: 100;
+
         }
 
         .arvo {
@@ -41,7 +43,7 @@
 
         .titling {
             font-family: titling-gothic-fb-condensed, sans-serif;
-            font-weight: 100;
+
         }
 
         @font-face {
@@ -95,7 +97,7 @@
             height: 100vh;
             top: 0;
             left: 0;
-            background-color: rgba(0, 0, 0, .8);
+
             overflow: scroll;
         }
 
@@ -109,7 +111,7 @@
         }
 
         #skrifttyperPop {
-            width: 80vw;
+            max-width: 60vw;
             min-height: 50vh;
             margin: auto;
             background: white;
@@ -117,7 +119,8 @@
 
         h1 {
             font-size: 3rem;
-
+            font-weight: 100;
+            font-style: normal;
             text-align: center;
             color: #FFFFFF;
             letter-spacing: 4px;
@@ -129,6 +132,7 @@
 
         p {
             padding: 10px;
+            font-weight: 100;
 
             letter-spacing: 3px;
 
@@ -200,7 +204,6 @@
             }
 
         }
-
     </style>
 </head>
 
@@ -273,8 +276,5 @@
                 }
             });
         }
-
     </script>
-</body>
-
-</html>
+</body></html>
