--- a/index.html
+++ b/index.html
@@ -27,21 +27,22 @@
                 <ul class="list_wrapper">
 
                     <li class="all">ALL</li> <span class="span_left"></span>
+
                     <li class="headings">HEADINGS
                         <ul class="dropdown_content">
 
-                            <li class="all_padding">ALL</li>
-                            <li>SANS-SERIFS</li>
-                            <li>SERIFS</li>
+                            <li class="all_padding" class="filter valgt" data-kategori="alleO">ALL</li>
+                            <li class="filter" data-kategori="sans-serif">SANS-SERIFS</li>
+                            <li class="filter" data-kategori="serif">SERIFS</li>
 
                         </ul>
                     </li> <span class="span_right"></span>
                     <li class="body_texts">BODY TEXTS
                         <ul class="dropdown_content">
 
-                            <li>ALL</li>
-                            <li>SANS-SERIFS</li>
-                            <li>SERIFS</li>
+                            <li class="filter valgt" data-kategori="alleB">ALL</li>
+                            <li class="filter" data-kategori="sans-serif">SANS-SERIFS</li>
+                            <li class="filter" data-kategori="serif">SERIFS</li>
 
                         </ul>
                     </li>
