--- a/detaljeView.html
+++ b/detaljeView.html
@@ -9,6 +9,10 @@
 
     <link rel="stylesheet" href="https://use.typekit.net/awq5rwn.css">
     <style>
+        body {
+            margin: 0;
+        }
+
         .roboto {
             font-family: 'Roboto Slab';
             font-weight: 100;
@@ -87,19 +91,11 @@
 
         img {
             width: 100%;
-            height 60%;
+
             object-fit: contain;
         }
 
-        #detaljeView {
-            position: fixed;
-            width: 100vw;
-            height: 100vh;
-            top: 0;
-            left: 0;
-
-            overflow: scroll;
-        }
+        #detaljeView {}
 
         #detalje_button {
             position: fixed;
@@ -110,15 +106,10 @@
             margin: 1em;
         }
 
-        #skrifttyperPop {
-            max-width: 60vw;
-            min-height: 50vh;
-            margin: auto;
-            background: white;
-        }
+        #skrifttyperPop {}
 
         h1 {
-            font-size: 3rem;
+            font-size: 2rem;
             font-weight: 100;
             font-style: normal;
             text-align: center;
@@ -133,27 +124,28 @@
         p {
             padding: 10px;
             font-weight: 100;
+            margin: 0;
 
-            letter-spacing: 3px;
+            max-width: 300px;
 
 
         }
 
         #h1pop {
             background-color: rgb(10, 192, 247);
-            padding: 150px 0 150px 0;
+            padding: 50px 0 50px 0;
             margin: 0;
         }
 
 
         .imgPop {
-            padding: 30px;
+            padding: 40px;
         }
 
         .longTextBox {
             color: rgb(10, 192, 247);
             background-color: #242A31;
-            /*            padding: 40px;*/
+            padding: 40px;
 
         }
 
@@ -204,6 +196,7 @@
             }
 
         }
+
     </style>
 </head>
 
@@ -276,5 +269,8 @@
                 }
             });
         }
+
     </script>
-</body></html>
+</body>
+
+</html>
