--- a/detaljeView.html
+++ b/detaljeView.html
@@ -191,7 +191,15 @@
 
         }
 
+        .characterset_billede {
+            background-color: #242A31;
+            padding: 33px;
+        }
 
+        .numbers_billede {
+            background-color: #0CB1F2;
+            padding: 33px;
+        }
 
 
 
@@ -318,6 +326,8 @@
 
             }
 
+
+
             nav {
                 background-color: #242A31;
 
@@ -358,13 +368,7 @@
                 font-size: 2rem;
             }
 
-            .characterset_billede {
-                background-color: #242A31;
-            }
 
-            .numbers_billede {
-                background-color: #0CB1F2;
-            }
 
             li {}
 
