--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
                 <ul class="list_wrapper">
 
-                    <li class="all">ALL</li> <span class="span_left"></span>
+                    <li class=" all filter" data-kategori="alle">ALL</li> <span class="span_left"></span>
 
                     <li class="headings">HEADINGS
                         <ul class="dropdown_content">
 
-                            <li class="all_padding" class="filter valgt" data-kategori="alleO">ALL</li>
+                            <li class="filter valgt" data-kategori="alleO">ALL</li>
                             <li class="filter" data-kategori="sans-serif">SANS-SERIFS</li>
                             <li class="filter" data-kategori="serif">SERIFS</li>
 
@@ -96,4 +96,6 @@
         </section>
     </div>
     <script src="script.js"></script>
-</body></html>
+</body>
+
+</html>
